Fixed a glitch with the nav bar on mobile.

--- a/html_midterm/styles/nav.css
+++ b/html_midterm/styles/nav.css
@@ -54,6 +54,11 @@
 		padding: 0 3.5px;
 	}
 	
+		.del {
+		background-color: white; 
+		border: 1px solid black; 
+	}
+	
 }
 
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
@@ -86,13 +91,8 @@
 		font-size: 12px; 
 	}
 	
-	body nav ul li.active {
-		padding: 0px;
-		border: 1px solid black;
-	}
-	
 	body nav ul li a.active {
-		padding: 2px 5px;
+		background-color: white; 
 		border: none;
 	}
 	
@@ -116,6 +116,12 @@
 		font-style: normal;
 		top: 115px;
 		padding: 0 3.5px;
+	}
+	
+		
+	.del {
+		background-color: white; 
+		border: 1px solid black; 
 	}
 	
 }
